--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cecf7bf",
+   "id": "fb7610d2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import pandas as pd\n",
     "\n",
     "def flatten_monthly_data(enriched_file_path):\n",
@@ -31,11 +32,7 @@
     "    df['month_dt'] = pd.to_datetime(df['month'], format='%b-%y')\n",
     "    df = df.sort_values('month_dt')\n",
     "\n",
-    "    # Create a mapping from datetime back to original string\n",
-    "    month_order = df[['month', 'month_dt']].drop_duplicates().sort_values('month_dt')\n",
-    "    ordered_months = month_order['month'].tolist()\n",
-    "\n",
-    "    # Pivot\n",
+    "    # Pivot to multi-index columns\n",
     "    pivot_df = df.pivot_table(\n",
     "        index=static_cols,\n",
     "        columns='month',\n",
@@ -43,10 +40,23 @@
     "        aggfunc='first'\n",
     "    )\n",
     "\n",
-    "    # Reorder columns by sorted month\n",
-    "    pivot_df = pivot_df.reindex(columns=ordered_months, level=1)\n",
+    "    # Reorder columns: group by month, then metric\n",
+    "    ordered_months = (\n",
+    "        df[['month', 'month_dt']]\n",
+    "        .drop_duplicates()\n",
+    "        .sort_values('month_dt')['month']\n",
+    "        .tolist()\n",
+    "    )\n",
     "\n",
-    "    # Flatten multi-index columns\n",
+    "    # Build ordered column list: [Apr-25 avg, Apr-25 workstyle, May-25 avg, …]\n",
+    "    ordered_cols = []\n",
+    "    for month in ordered_months:\n",
+    "        for metric in dynamic_metrics:\n",
+    "            ordered_cols.append((metric, month))\n",
+    "\n",
+    "    pivot_df = pivot_df[ordered_cols]\n",
+    "\n",
+    "    # Flatten column names\n",
     "    pivot_df.columns = [\n",
     "        f\"{month} {metric.lower().replace(' ', '_')}\"\n",
     "        for metric, month in pivot_df.columns\n",
@@ -55,7 +65,7 @@
     "\n",
     "    # Save to Excel\n",
     "    pivot_df.to_excel(\"phase2_flattened.xlsx\", sheet_name=\"flattened\", index=False)\n",
-    "    print(f\"✅ Flattened file created with months ordered chronologically.\")flatten_monthly_data(\"phase1_enriched.xlsx\")"
+    "    print(f\"✅ Flattened file created with grouped monthly columns for MoM comparison.\")"
    ]
   },
   {
