--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,17 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb7610d2",
+   "id": "a307bbeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import pandas as pd\n",
     "\n",
     "def flatten_monthly_data(enriched_file_path):\n",
     "    # Load enriched data\n",
     "    df = pd.read_excel(enriched_file_path, sheet_name=\"enriched_data\")\n",
     "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Normalize month column\n",
+    "    df['month'] = df['month'].str.strip().str.title()  # e.g. 'Feb-25'\n",
+    "    df['month_dt'] = pd.to_datetime(df['month'], format='%b-%y')\n",
     "\n",
     "    # Static columns\n",
     "    static_cols = [\n",
@@ -27,12 +30,7 @@
     "        'workstyle met?'\n",
     "    ]\n",
     "\n",
-    "    # Convert month to datetime for sorting\n",
-    "    df['month'] = df['month'].str.strip()\n",
-    "    df['month_dt'] = pd.to_datetime(df['month'], format='%b-%y')\n",
-    "    df = df.sort_values('month_dt')\n",
-    "\n",
-    "    # Pivot to multi-index columns\n",
+    "    # Pivot\n",
     "    pivot_df = df.pivot_table(\n",
     "        index=static_cols,\n",
     "        columns='month',\n",
@@ -40,32 +38,33 @@
     "        aggfunc='first'\n",
     "    )\n",
     "\n",
-    "    # Reorder columns: group by month, then metric\n",
-    "    ordered_months = (\n",
+    "    # Sort months chronologically\n",
+    "    sorted_months = (\n",
     "        df[['month', 'month_dt']]\n",
     "        .drop_duplicates()\n",
     "        .sort_values('month_dt')['month']\n",
     "        .tolist()\n",
     "    )\n",
     "\n",
-    "    # Build ordered column list: [Apr-25 avg, Apr-25 workstyle, May-25 avg, …]\n",
+    "    # Build ordered column list: [Feb-25 avg, Feb-25 workstyle, Mar-25 avg, …]\n",
     "    ordered_cols = []\n",
-    "    for month in ordered_months:\n",
+    "    for month in sorted_months:\n",
     "        for metric in dynamic_metrics:\n",
-    "            ordered_cols.append((metric, month))\n",
+    "            col_key = (metric.lower(), month)\n",
+    "            if col_key in pivot_df.columns:\n",
+    "                ordered_cols.append(col_key)\n",
     "\n",
+    "    # Reindex and flatten\n",
     "    pivot_df = pivot_df[ordered_cols]\n",
-    "\n",
-    "    # Flatten column names\n",
     "    pivot_df.columns = [\n",
-    "        f\"{month} {metric.lower().replace(' ', '_')}\"\n",
+    "        f\"{month} {metric.replace(' ', '_')}\"\n",
     "        for metric, month in pivot_df.columns\n",
     "    ]\n",
     "    pivot_df.reset_index(inplace=True)\n",
     "\n",
     "    # Save to Excel\n",
     "    pivot_df.to_excel(\"phase2_flattened.xlsx\", sheet_name=\"flattened\", index=False)\n",
-    "    print(f\"✅ Flattened file created with grouped monthly columns for MoM comparison.\")"
+    "    print(f\"✅ Flattened file created with grouped monthly columns.\")"
    ]
   },
   {
