--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,10 +3,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a307bbeb",
+   "id": "a859a4cd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def append_md_info(flattened_file_path, gha_file_path):\n",
+    "    # Load flattened data\n",
+    "    flat_df = pd.read_excel(flattened_file_path, sheet_name=\"flattened\")\n",
+    "    flat_df.columns = flat_df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Load GHA data\n",
+    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount Employee - Detail\")\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
+    "    gha_df = gha_df.drop_duplicates(subset='employee id', keep='last')\n",
+    "\n",
+    "    # Build lookup dictionary\n",
+    "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    # Identify all MDs\n",
+    "    md_df = gha_df[gha_df['global career band'].str.strip().str.upper() == 'MD']\n",
+    "    md_ids = set(md_df['employee id'])\n",
+    "\n",
+    "    # Prepare output columns\n",
+    "    flat_df['md id'] = ''\n",
+    "    flat_df['md name'] = ''\n",
+    "    flat_df['md found?'] = 'No'\n",
+    "\n",
+    "    for idx, row in flat_df.iterrows():\n",
+    "        current_mgr_id = row.get('entity manager employee id')\n",
+    "        visited = set()\n",
+    "\n",
+    "        while pd.notna(current_mgr_id) and current_mgr_id not in visited:\n",
+    "            visited.add(current_mgr_id)\n",
+    "            mgr_record = gha_lookup.get(current_mgr_id)\n",
+    "\n",
+    "            if mgr_record is None:\n",
+    "                break\n",
+    "\n",
+    "            if current_mgr_id in md_ids:\n",
+    "                flat_df.at[idx, 'md id'] = current_mgr_id\n",
+    "                flat_df.at[idx, 'md name'] = mgr_record.get('employee name', '')\n",
+    "                flat_df.at[idx, 'md found?'] = 'Yes'\n",
+    "                break\n",
+    "\n",
+    "            current_mgr_id = mgr_record.get('entity manager employee id')\n",
+    "\n",
+    "    # Save updated file\n",
+    "    flat_df.to_excel(\"phase2_flattened_with_md.xlsx\", sheet_name=\"flattened\", index=False)\n",
+    "    print(f\"✅ MD tracing complete: {flat_df['md found?'].value_counts().to_dict()}\")\n",
+    "    \n",
+    "append_md_info(\"phase2_flattened.xlsx\", \"Input/gha_sep15.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f742b17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# perfect\n",
     "import pandas as pd\n",
     "\n",
     "def flatten_monthly_data(enriched_file_path):\n",
