--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,10 +3,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a859a4cd",
+   "id": "5df77412",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def trace_md_and_flag_missing(flattened_file_path, gha_file_path):\n",
+    "    # Load flattened data\n",
+    "    flat_df = pd.read_excel(flattened_file_path, sheet_name=\"flattened\")\n",
+    "    flat_df.columns = flat_df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Load GHA data\n",
+    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount Employee - Detail\")\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
+    "    gha_df = gha_df.drop_duplicates(subset='employee id', keep='last')\n",
+    "\n",
+    "    # Normalize IDs to string\n",
+    "    gha_df['employee id'] = gha_df['employee id'].astype(str).str.strip()\n",
+    "    gha_df['entity manager employee id'] = gha_df['entity manager employee id'].astype(str).str.strip()\n",
+    "    flat_df['employee id'] = flat_df['employee id'].astype(str).str.strip()\n",
+    "    flat_df['entity manager employee id'] = flat_df['entity manager employee id'].astype(str).str.strip()\n",
+    "\n",
+    "    # Build lookup dictionary\n",
+    "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    # Identify all MDs\n",
+    "    md_df = gha_df[gha_df['global career band'].str.strip().str.upper() == 'MD']\n",
+    "    md_ids = set(md_df['employee id'])\n",
+    "\n",
+    "    # Prepare output columns\n",
+    "    flat_df['md id'] = ''\n",
+    "    flat_df['md name'] = ''\n",
+    "    flat_df['md found?'] = 'No'\n",
+    "\n",
+    "    missing_records = []\n",
+    "\n",
+    "    for idx, row in flat_df.iterrows():\n",
+    "        current_mgr_id = row.get('entity manager employee id')\n",
+    "        visited = set()\n",
+    "        last_known_mgr_id = None\n",
+    "        last_known_mgr_name = None\n",
+    "        md_found = False\n",
+    "\n",
+    "        while pd.notna(current_mgr_id) and current_mgr_id not in visited:\n",
+    "            visited.add(current_mgr_id)\n",
+    "            mgr_record = gha_lookup.get(current_mgr_id)\n",
+    "\n",
+    "            if mgr_record is None:\n",
+    "                break\n",
+    "\n",
+    "            last_known_mgr_id = current_mgr_id\n",
+    "            last_known_mgr_name = mgr_record.get('employee name', '')\n",
+    "\n",
+    "            if current_mgr_id in md_ids:\n",
+    "                flat_df.at[idx, 'md id'] = current_mgr_id\n",
+    "                flat_df.at[idx, 'md name'] = last_known_mgr_name\n",
+    "                flat_df.at[idx, 'md found?'] = 'Yes'\n",
+    "                md_found = True\n",
+    "                break\n",
+    "\n",
+    "            current_mgr_id = mgr_record.get('entity manager employee id')\n",
+    "\n",
+    "        if not md_found:\n",
+    "            missing_row = row.to_dict()\n",
+    "            missing_row.update({\n",
+    "                'last reachable manager id': last_known_mgr_id,\n",
+    "                'last reachable manager name': last_known_mgr_name,\n",
+    "                'missing reason': 'No MD found in chain'\n",
+    "            })\n",
+    "            missing_records.append(missing_row)\n",
+    "\n",
+    "    # Save both sheets\n",
+    "    with pd.ExcelWriter(\"phase2_flattened_with_md.xlsx\", engine='openpyxl') as writer:\n",
+    "        flat_df.to_excel(writer, sheet_name=\"flattened\", index=False)\n",
+    "        pd.DataFrame(missing_records).to_excel(writer, sheet_name=\"missing md chain\", index=False)\n",
+    "\n",
+    "    print(f\"✅ MD tracing complete: {flat_df['md found?'].value_counts().to_dict()}\")\n",
+    "trace_md_and_flag_missing(\"phase2_flattened.xlsx\", \"Input/gha_sep15.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "167143b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Fine for MD finding\n",
     "import pandas as pd\n",
     "\n",
     "def append_md_info(flattened_file_path, gha_file_path):\n",
@@ -60,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f742b17",
+   "id": "94d4515f",
    "metadata": {},
    "outputs": [],
    "source": [
