--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,112 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df77412",
+   "id": "98797a65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# standalone function to find md in gha\n",
+    "import pandas as pd\n",
+    "\n",
+    "def trace_md_from_gha(gha_file_path, sheet_name=\"Headcount Employee - Detail\"):\n",
+    "    # Load GHA data\n",
+    "    df = pd.read_excel(gha_file_path, sheet_name=sheet_name)\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Normalize IDs\n",
+    "    df['employee id'] = df['employee id'].astype(str).str.strip()\n",
+    "    df['entity manager employee id'] = df['entity manager employee id'].astype(str).str.strip()\n",
+    "\n",
+    "    # Select required columns\n",
+    "    required_cols = [\n",
+    "        'employee id', 'employee name', 'global career band',\n",
+    "        'employee business email address', 'legal entity',\n",
+    "        'entity manager employee name', 'functional manager employee name',\n",
+    "        'employee category', 'bf level1 name', 'bf level2 name',\n",
+    "        'bf level3 name', 'bf level4 name', 'bf level5 name',\n",
+    "        'entity manager employee id'\n",
+    "    ]\n",
+    "    df = df[required_cols].copy()\n",
+    "\n",
+    "    # Build lookup dictionary\n",
+    "    gha_lookup = df.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    # Identify all MDs\n",
+    "    md_ids = set(df[df['global career band'].str.upper().str.strip() == 'MD']['employee id'])\n",
+    "\n",
+    "    # Prepare output columns\n",
+    "    df['md id'] = ''\n",
+    "    df['md name'] = ''\n",
+    "    df['md found?'] = 'No'\n",
+    "\n",
+    "    missing_records = []\n",
+    "\n",
+    "    for idx, row in df.iterrows():\n",
+    "        current_mgr_id = row.get('entity manager employee id')\n",
+    "        visited = set()\n",
+    "        last_known_mgr_id = None\n",
+    "        last_known_mgr_name = None\n",
+    "        md_found = False\n",
+    "\n",
+    "        while pd.notna(current_mgr_id) and current_mgr_id not in visited:\n",
+    "            visited.add(current_mgr_id)\n",
+    "            mgr_record = gha_lookup.get(current_mgr_id)\n",
+    "\n",
+    "            if mgr_record is None:\n",
+    "                break\n",
+    "\n",
+    "            last_known_mgr_id = current_mgr_id\n",
+    "            last_known_mgr_name = mgr_record.get('employee name', '')\n",
+    "\n",
+    "            if current_mgr_id in md_ids:\n",
+    "                df.at[idx, 'md id'] = current_mgr_id\n",
+    "                df.at[idx, 'md name'] = last_known_mgr_name\n",
+    "                df.at[idx, 'md found?'] = 'Yes'\n",
+    "                md_found = True\n",
+    "                break\n",
+    "\n",
+    "            current_mgr_id = mgr_record.get('entity manager employee id')\n",
+    "\n",
+    "        if not md_found:\n",
+    "            missing_row = row.to_dict()\n",
+    "            missing_row.update({\n",
+    "                'last reachable manager id': last_known_mgr_id,\n",
+    "                'last reachable manager name': last_known_mgr_name,\n",
+    "                'missing reason': 'No MD found in chain'\n",
+    "            })\n",
+    "            missing_records.append(missing_row)\n",
+    "\n",
+    "    # Return both DataFrames\n",
+    "    df_with_md = df[df['md found?'] == 'Yes'].copy()\n",
+    "    df_missing_md = pd.DataFrame(missing_records)\n",
+    "\n",
+    "    return df_with_md, df_missing_md\n",
+    "df_md, df_missing = trace_md_from_gha(\"Input/gha_sep15.xlsx\")\n",
+    "\n",
+    "# Save to Excel\n",
+    "with pd.ExcelWriter(\"gha_md_trace.xlsx\", engine='openpyxl') as writer:\n",
+    "    df_md.to_excel(writer, sheet_name=\"md found\", index=False)\n",
+    "    df_missing.to_excel(writer, sheet_name=\"md missing\", index=False)\n",
+    "    \n",
+    "def neutralize_column_names(df):\n",
+    "    def title_case(col):\n",
+    "        # Replace underscores with spaces, split into words, capitalize each\n",
+    "        return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
+    "\n",
+    "    df.columns = [title_case(col) for col in df.columns]\n",
+    "    return df\n",
+    "\n",
+    "# After loading or transforming your DataFrame\n",
+    "df = neutralize_column_names(df)\n",
+    "\n",
+    "# Then save or display\n",
+    "df.to_excel(\"cleaned_output.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0057c295",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "167143b3",
+   "id": "91ed1947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94d4515f",
+   "id": "2550fe38",
    "metadata": {},
    "outputs": [],
    "source": [
