--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,102 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98797a65",
+   "id": "6d9abb0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# phase 3\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def get_reporting_tree(manager_id, gha_lookup):\n",
+    "    reports = set()\n",
+    "    for emp_id, record in gha_lookup.items():\n",
+    "        if record.get('entity manager employee id') == manager_id:\n",
+    "            reports.add(emp_id)\n",
+    "            reports.update(get_reporting_tree(emp_id, gha_lookup))\n",
+    "    return reports\n",
+    "\n",
+    "def phase3_analysis(flattened_file_path, gha_file_path):\n",
+    "    # Load flattened data\n",
+    "    df = pd.read_excel(flattened_file_path, sheet_name=\"flattened\")\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Load GHA data\n",
+    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount Employee - Detail\")\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
+    "    gha_df['employee id'] = gha_df['employee id'].astype(str).str.strip()\n",
+    "    gha_df['entity manager employee id'] = gha_df['entity manager employee id'].astype(str).str.strip()\n",
+    "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    # Normalize MD and GCB info\n",
+    "    df['md name'] = df['md name'].fillna('').str.strip()\n",
+    "    df['global career band'] = df['global career band'].fillna('').str.upper()\n",
+    "\n",
+    "    # 1️⃣ Hierarchy Summary: MD → GCB3 → full subtree count\n",
+    "    hierarchy_summary = []\n",
+    "    for md in df['md name'].dropna().unique():\n",
+    "        md_df = df[df['md name'] == md]\n",
+    "        gcb3_df = md_df[md_df['global career band'] == 'GCB 3']\n",
+    "        for _, gcb3 in gcb3_df.iterrows():\n",
+    "            gcb3_id = gcb3['employee id']\n",
+    "            gcb3_name = gcb3['employee name']\n",
+    "            full_subtree = get_reporting_tree(gcb3_id, gha_lookup)\n",
+    "            hierarchy_summary.append({\n",
+    "                'MD Name': md,\n",
+    "                'GCB3 ID': gcb3_id,\n",
+    "                'GCB3 Name': gcb3_name,\n",
+    "                'Total Reports Under GCB3': len(full_subtree)\n",
+    "            })\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy_summary)\n",
+    "\n",
+    "    # 2️⃣ Monthly Headcount & Workstyle Met\n",
+    "    month_cols = [col for col in df.columns if 'workstyle met?' in col]\n",
+    "    trend_data = []\n",
+    "    for col in month_cols:\n",
+    "        month = col.split()[0]  # e.g. 'Apr-25'\n",
+    "        avg_col = f\"{month} avg days at any office per week (with shrinkage)\".lower().replace(' ', '_')\n",
+    "        if avg_col not in df.columns:\n",
+    "            continue\n",
+    "        headcount = df[avg_col].notna().sum()\n",
+    "        met_count = df[col].str.strip().str.lower().eq('yes').sum()\n",
+    "        pct = round((met_count / headcount) * 100, 2) if headcount else 0\n",
+    "        trend_data.append({\n",
+    "            'Month': month,\n",
+    "            'Headcount': headcount,\n",
+    "            'Workstyle Met': met_count,\n",
+    "            'Percentage': pct\n",
+    "        })\n",
+    "    trend_df = pd.DataFrame(trend_data)\n",
+    "    trend_df['Month_dt'] = pd.to_datetime(trend_df['Month'], format='%b-%y')\n",
+    "    trend_df = trend_df.sort_values('Month_dt')\n",
+    "    trend_df['MoM Change (%)'] = trend_df['Percentage'].diff().round(2)\n",
+    "\n",
+    "    # 3️⃣ Plot Trend\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(trend_df['Month_dt'], trend_df['Percentage'], marker='o', color='blue')\n",
+    "    plt.title('Workstyle Met % Trend Over Time')\n",
+    "    plt.xlabel('Month')\n",
+    "    plt.ylabel('% Workstyle Met')\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(\"workstyle_met_trend.png\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Save outputs\n",
+    "    with pd.ExcelWriter(\"phase3_trend_analysis.xlsx\", engine='openpyxl') as writer:\n",
+    "        hierarchy_df.to_excel(writer, sheet_name=\"Hierarchy Summary\", index=False)\n",
+    "        trend_df.drop(columns='Month_dt').to_excel(writer, sheet_name=\"Monthly Trend\", index=False)\n",
+    "\n",
+    "    print(\"✅ Phase 3 complete. Graph saved as 'workstyle_met_trend.png'.\")\n",
+    "    \n",
+    "phase3_analysis(\"phase2_flattened_with_md.xlsx\", \"Input/gha_sep15.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "282e7960",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0057c295",
+   "id": "27d7c6db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91ed1947",
+   "id": "9c3cada7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2550fe38",
+   "id": "133e319d",
    "metadata": {},
    "outputs": [],
    "source": [
