--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,37 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d9abb0e",
+   "id": "0202d275",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# phase 3\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def get_reporting_tree(manager_id, gha_lookup):\n",
+    "def get_reporting_tree(manager_id, df_lookup):\n",
     "    reports = set()\n",
-    "    for emp_id, record in gha_lookup.items():\n",
+    "    for emp_id, record in df_lookup.items():\n",
     "        if record.get('entity manager employee id') == manager_id:\n",
     "            reports.add(emp_id)\n",
-    "            reports.update(get_reporting_tree(emp_id, gha_lookup))\n",
+    "            reports.update(get_reporting_tree(emp_id, df_lookup))\n",
     "    return reports\n",
     "\n",
-    "def phase3_analysis(flattened_file_path, gha_file_path):\n",
+    "def phase3_analysis(flattened_file_path):\n",
     "    # Load flattened data\n",
     "    df = pd.read_excel(flattened_file_path, sheet_name=\"flattened\")\n",
     "    df.columns = df.columns.str.strip().str.lower()\n",
     "\n",
-    "    # Load GHA data\n",
-    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount Employee - Detail\")\n",
-    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
-    "    gha_df['employee id'] = gha_df['employee id'].astype(str).str.strip()\n",
-    "    gha_df['entity manager employee id'] = gha_df['entity manager employee id'].astype(str).str.strip()\n",
-    "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
-    "\n",
-    "    # Normalize MD and GCB info\n",
+    "    # Normalize key columns\n",
+    "    df['employee id'] = df['employee id'].astype(str).str.strip()\n",
+    "    df['entity manager employee id'] = df['entity manager employee id'].astype(str).str.strip()\n",
     "    df['md name'] = df['md name'].fillna('').str.strip()\n",
     "    df['global career band'] = df['global career band'].fillna('').str.upper()\n",
+    "\n",
+    "    df_lookup = df.set_index('employee id').to_dict('index')\n",
     "\n",
     "    # 1️⃣ Hierarchy Summary: MD → GCB3 → full subtree count\n",
     "    hierarchy_summary = []\n",
@@ -43,7 +39,7 @@
     "        for _, gcb3 in gcb3_df.iterrows():\n",
     "            gcb3_id = gcb3['employee id']\n",
     "            gcb3_name = gcb3['employee name']\n",
-    "            full_subtree = get_reporting_tree(gcb3_id, gha_lookup)\n",
+    "            full_subtree = get_reporting_tree(gcb3_id, df_lookup)\n",
     "            hierarchy_summary.append({\n",
     "                'MD Name': md,\n",
     "                'GCB3 ID': gcb3_id,\n",
@@ -92,13 +88,14 @@
     "\n",
     "    print(\"✅ Phase 3 complete. Graph saved as 'workstyle_met_trend.png'.\")\n",
     "    \n",
-    "phase3_analysis(\"phase2_flattened_with_md.xlsx\", \"Input/gha_sep15.xlsx\")"
+    "# phase3_analysis(\"phase2_flattened_with_md.xlsx\", \"Input/gha_sep15.xlsx\")\n",
+    "phase3_analysis(\"phase2_flattened_with_md.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "282e7960",
+   "id": "d275ffce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27d7c6db",
+   "id": "d8e2ecb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c3cada7",
+   "id": "4a306c59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133e319d",
+   "id": "dff5c4fc",
    "metadata": {},
    "outputs": [],
    "source": [
