--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,138 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0202d275",
+   "id": "ee10720d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# emp row duplicating due to manager change over the months\n",
+    "import pandas as pd\n",
+    "\n",
+    "def get_reporting_tree(manager_id, df_lookup):\n",
+    "    reports = set()\n",
+    "    for emp_id, record in df_lookup.items():\n",
+    "        if record.get('entity manager employee id') == manager_id:\n",
+    "            reports.add(emp_id)\n",
+    "            reports.update(get_reporting_tree(emp_id, df_lookup))\n",
+    "    return reports\n",
+    "\n",
+    "def phase3_analysis(flattened_file_path):\n",
+    "    # Load flattened data\n",
+    "    df = pd.read_excel(flattened_file_path, sheet_name=\"flattened\")\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Identify monthly columns\n",
+    "    monthly_cols = [col for col in df.columns if any(x in col for x in ['workstyle met?', 'avg days'])]\n",
+    "\n",
+    "    # Static columns to preserve\n",
+    "    static_cols = ['employee id', 'employee name', 'global career band', 'md id', 'md name', 'md found?', 'entity manager employee id']\n",
+    "\n",
+    "    # Normalize monthly columns\n",
+    "    df[monthly_cols] = df[monthly_cols].fillna('').astype(str).apply(lambda x: x.str.strip().str.lower())\n",
+    "\n",
+    "    # Log duplicates\n",
+    "    dupes = df['employee id'].value_counts()\n",
+    "    multi_row_employees = dupes[dupes > 1].index.tolist()\n",
+    "    print(f\"🔍 Employees with multiple rows due to manager changes: {len(multi_row_employees)}\")\n",
+    "\n",
+    "    # Save log\n",
+    "    pd.DataFrame({'employee id': multi_row_employees}).to_excel(\"phase3_multi_row_log.xlsx\", index=False)\n",
+    "\n",
+    "    # Merge rows per employee\n",
+    "    grouped = df.groupby('employee id')\n",
+    "    merged_rows = []\n",
+    "    for emp_id, group in grouped:\n",
+    "        merged = {'employee id': emp_id}\n",
+    "        for col in static_cols:\n",
+    "            if col in group.columns:\n",
+    "                merged[col] = group[col].dropna().iloc[-1] if not group[col].dropna().empty else ''\n",
+    "        for col in monthly_cols:\n",
+    "            values = group[col].replace('', pd.NA).dropna()\n",
+    "            merged[col] = values.iloc[0] if not values.empty else ''\n",
+    "        merged_rows.append(merged)\n",
+    "\n",
+    "    df_merged = pd.DataFrame(merged_rows)\n",
+    "\n",
+    "    # Build lookup\n",
+    "    df_lookup = df_merged.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    # 1️⃣ Hierarchy Summary\n",
+    "    df_merged['global career band'] = df_merged['global career band'].fillna('').str.upper()\n",
+    "    df_merged['md name'] = df_merged['md name'].fillna('').str.strip()\n",
+    "\n",
+    "    hierarchy_summary = []\n",
+    "    for md in df_merged['md name'].dropna().unique():\n",
+    "        md_df = df_merged[df_merged['md name'] == md]\n",
+    "        gcb3_df = md_df[md_df['global career band'] == 'GCB 3']\n",
+    "        for _, gcb3 in gcb3_df.iterrows():\n",
+    "            gcb3_id = gcb3['employee id']\n",
+    "            gcb3_name = gcb3['employee name']\n",
+    "            full_subtree = get_reporting_tree(gcb3_id, df_lookup)\n",
+    "            hierarchy_summary.append({\n",
+    "                'MD Name': md,\n",
+    "                'GCB3 ID': gcb3_id,\n",
+    "                'GCB3 Name': gcb3_name,\n",
+    "                'Total Reports Under GCB3': len(full_subtree)\n",
+    "            })\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy_summary)\n",
+    "\n",
+    "    # 2️⃣ Monthly Trend Summary\n",
+    "    trend_data = []\n",
+    "    for col in monthly_cols:\n",
+    "        if 'workstyle met?' not in col:\n",
+    "            continue\n",
+    "        month = col.split()[0]\n",
+    "        avg_col = f\"{month} avg days at any office per week (with shrinkage)\".lower().replace(' ', '_')\n",
+    "        if avg_col not in df_merged.columns:\n",
+    "            continue\n",
+    "        headcount = df_merged[avg_col].notna().sum()\n",
+    "        met_count = df_merged[col].str.strip().str.lower().eq('yes').sum()\n",
+    "        pct = round((met_count / headcount) * 100, 2) if headcount else 0\n",
+    "        trend_data.append({\n",
+    "            'Month': month,\n",
+    "            'Headcount': headcount,\n",
+    "            'Workstyle Met': met_count,\n",
+    "            'Percentage': pct\n",
+    "        })\n",
+    "\n",
+    "    trend_df = pd.DataFrame(trend_data)\n",
+    "    trend_df['Month_dt'] = pd.to_datetime(trend_df['Month'], format='%b-%y')\n",
+    "    trend_df = trend_df.sort_values('Month_dt')\n",
+    "    trend_df['MoM Change (%)'] = trend_df['Percentage'].diff().round(2)\n",
+    "\n",
+    "    # Save outputs\n",
+    "    with pd.ExcelWriter(\"phase3_trend_analysis.xlsx\", engine='openpyxl') as writer:\n",
+    "        hierarchy_df.to_excel(writer, sheet_name=\"Hierarchy Summary\", index=False)\n",
+    "        trend_df.drop(columns='Month_dt').to_excel(writer, sheet_name=\"Monthly Trend\", index=False)\n",
+    "\n",
+    "    print(\"✅ Phase 3 summary complete. Use draw_phase3_graph(trend_df) to visualize.\")\n",
+    "    return trend_df\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def draw_phase3_graph(trend_df):\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(trend_df['Month_dt'], trend_df['Percentage'], marker='o', color='blue')\n",
+    "    plt.title('Workstyle Met % Trend Over Time')\n",
+    "    plt.xlabel('Month')\n",
+    "    plt.ylabel('% Workstyle Met')\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(\"workstyle_met_trend.png\")\n",
+    "    plt.show()\n",
+    "    print(\"📈 Graph saved as 'workstyle_met_trend.png'.\")\n",
+    "    \n",
+    "from phase3_analysis import phase3_analysis\n",
+    "from draw_phase3_graph import draw_phase3_graph\n",
+    "\n",
+    "trend_df = phase3_analysis(\"phase2_flattened_with_md.xlsx\")\n",
+    "draw_phase3_graph(trend_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e413213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d275ffce",
+   "id": "8da8544d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8e2ecb3",
+   "id": "e0b23da4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a306c59",
+   "id": "deaaa468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dff5c4fc",
+   "id": "41ad32ea",
    "metadata": {},
    "outputs": [],
    "source": [
