--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,114 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee10720d",
+   "id": "befda978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def append_md_info_with_trace(flattened_file_path, gha_file_path,\n",
+    "                              flattened_sheet=\"flattened\",\n",
+    "                              gha_sheet=\"Headcount Employee - Detail\"):\n",
+    "    # Load files\n",
+    "    flat_df = pd.read_excel(flattened_file_path, sheet_name=flattened_sheet)\n",
+    "    gha_df = pd.read_excel(gha_file_path, sheet_name=gha_sheet)\n",
+    "\n",
+    "    # Normalize columns\n",
+    "    flat_df.columns = flat_df.columns.str.strip().str.lower()\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    flat_df['employee id'] = flat_df['employee id'].astype(str).str.strip()\n",
+    "    flat_df['entity manager employee id'] = flat_df['entity manager employee id'].astype(str).str.strip()\n",
+    "    gha_df['employee id'] = gha_df['employee id'].astype(str).str.strip()\n",
+    "    gha_df['entity manager employee id'] = gha_df['entity manager employee id'].astype(str).str.strip()\n",
+    "    gha_df['global career band'] = gha_df['global career band'].fillna('').str.upper().str.strip()\n",
+    "\n",
+    "    # Build GHA lookup\n",
+    "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    # Prepare output columns\n",
+    "    flat_df['md id'] = ''\n",
+    "    flat_df['md name'] = ''\n",
+    "    flat_df['md found?'] = 'No'\n",
+    "    flat_df['md trace comment'] = ''\n",
+    "\n",
+    "    # Traverse each employee\n",
+    "    for idx, row in flat_df.iterrows():\n",
+    "        emp_id = row['employee id']\n",
+    "        current_mgr_id = row['entity manager employee id']\n",
+    "        visited = set()\n",
+    "\n",
+    "        while current_mgr_id and current_mgr_id not in visited:\n",
+    "            visited.add(current_mgr_id)\n",
+    "            mgr_record = gha_lookup.get(current_mgr_id)\n",
+    "\n",
+    "            if mgr_record is None:\n",
+    "                flat_df.at[idx, 'md trace comment'] = f\"Entity Manager ID missing in GHA: {current_mgr_id}\"\n",
+    "                break\n",
+    "\n",
+    "            mgr_gcb = mgr_record.get('global career band', '')\n",
+    "            if mgr_gcb == 'MD':\n",
+    "                flat_df.at[idx, 'md id'] = current_mgr_id\n",
+    "                flat_df.at[idx, 'md name'] = mgr_record.get('employee name', '')\n",
+    "                flat_df.at[idx, 'md found?'] = 'Yes'\n",
+    "                break\n",
+    "\n",
+    "            current_mgr_id = mgr_record.get('entity manager employee id', '').strip()\n",
+    "\n",
+    "    # Restore column names\n",
+    "    def title_case(col):\n",
+    "        return ' '.join(word.capitalize() for word in col.replace('_', ' ').split())\n",
+    "    flat_df.columns = [title_case(col) for col in flat_df.columns]\n",
+    "\n",
+    "    # Save output\n",
+    "    flat_df.to_excel(\"phase2_flattened_with_md_trace.xlsx\", index=False)\n",
+    "    print(\"✅ MD tracing complete. Output saved as 'phase2_flattened_with_md_trace.xlsx'.\")\n",
+    "    return flat_df\n",
+    "\n",
+    "append_md_info_with_trace(\"phase1_enriched_monthly.xlsx\", \"Input/gha_sep15.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9ecfa61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# updaTED ALL PHASES\n",
+    "import pandas as pd\n",
+    "\n",
+    "def enrich_gha_with_manager_gcb(gha_file_path, sheet_name=\"Headcount Employee - Detail\"):\n",
+    "    # Load GHA data\n",
+    "    df = pd.read_excel(gha_file_path, sheet_name=sheet_name)\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Normalize IDs\n",
+    "    df['employee id'] = df['employee id'].astype(str).str.strip()\n",
+    "    df['entity manager employee id'] = df['entity manager employee id'].astype(str).str.strip()\n",
+    "\n",
+    "    # Build lookup for manager GCB\n",
+    "    gcb_lookup = df.set_index('employee id')['global career band'].to_dict()\n",
+    "\n",
+    "    # Map Entity Manager GCB\n",
+    "    df['entity manager gcb'] = df['entity manager employee id'].map(gcb_lookup)\n",
+    "\n",
+    "    # Optional: Normalize GCBs\n",
+    "    df['global career band'] = df['global career band'].fillna('').str.upper().str.strip()\n",
+    "    df['entity manager gcb'] = df['entity manager gcb'].fillna('').str.upper().str.strip()\n",
+    "\n",
+    "    # Save enriched GHA\n",
+    "    df.to_excel(\"gha_enriched_with_mgr_gcb.xlsx\", index=False)\n",
+    "    print(\"✅ Phase 1 complete: Entity Manager GCB added.\")\n",
+    "    return df\n",
+    "enrich_gha_with_manager_gcb(\"Input/gha_sep15.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a89e7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e413213",
+   "id": "20cc2169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da8544d",
+   "id": "aa61a294",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b23da4",
+   "id": "d53cadd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deaaa468",
+   "id": "c5b36ae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ad32ea",
+   "id": "5e9d5624",
    "metadata": {},
    "outputs": [],
    "source": [
